# codeagent

./: .env.example  .gitignore  README.md  permission_allowed.txt  pyproject.toml
.skills/agent-harness/: SKILL.md
.skills/code-review/: SKILL.md
.skills/python-refactor/: SKILL.md
codeagent/: __init__.py  __main__.py  agent.py  anthropic_client.py  cli.py  config.py  hello.py  messages.py  models.py  tracing.py
codeagent/context/: __init__.py  manager.py  models.py
codeagent/hooks/: __init__.py  defaults.py  manager.py
codeagent/mcp/: __init__.py  router.py
codeagent/memory/: __init__.py  manager.py  models.py  store.py
codeagent/permissions/: __init__.py  policy.py
codeagent/prompts/: __init__.py  assembler.py  loader.py  models.py  providers.py  runtime.py
codeagent/prompts/templates/: context_summary.md  date_reminder.md  execution.md  identity.md  memory.md  memory_context.md  skill.md  subagent.md  task.md  todo.md  tools.md  (+1 more)
codeagent/recovery/: __init__.py  strategy.py
codeagent/runtime/: __init__.py  background.py
codeagent/skills/: __init__.py  loader.py  models.py
codeagent/tasks/: __init__.py  models.py
codeagent/teams/: __init__.py  bus.py
codeagent/tools/: __init__.py  base.py  bash.py  compact.py  defaults.py  edit.py  glob_tool.py  grep.py  memory.py  read.py  registry.py  skill.py  task.py  todo.py  write.py
codeagent/worktrees/: __init__.py  manager.py
tests/: test_agent.py  test_anthropic_client.py  test_cli.py  test_context.py  test_memory.py  test_permissions_hooks.py  test_prompts.py  test_skills.py  test_tools.py
