[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagent"
version = "0.1.0"
description = "A minimal, extensible coding-agent harness."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "langsmith>=0.1.95",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["codeagent*"]
